--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,13 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+
+.ellipsis {
+  overflow: hidden;
+  display: -webkit-box;
+  line-clamp: 4;
+  -webkit-line-clamp: 4;
+  box-orient: vertical;
+  -webkit-box-orient: vertical;  
+}
